2002-04-25  Michael Yount <csf@moscow.com>

	* lib/Mj/Archive.pm:  (_sort_archives, _by_date)  Use a
	separate routine for archive sorting for compatibility
	with perl 5.005.02 and earlier versions.  Thanks
	to Larry Rosenbaum.

	* lib/Mj/Format.pm:  (archive)  Bugfix:  remove unnecessary
	array reversal.

	* lib/Mj/Resend.pm:  (_r_ck_header)  Recursively check
	the parts of a message for headers which match the admin_headers,
	noarchive_headers, and taboo_headers settings.  Those three
	settings now apply to all headers within a message, rather than
	just the top-level headers.

2002-04-20  Michael Yount <csf@moscow.com>

	* bin/mj_queuerun, mj_queueserv, mj_shutdown:  Add 3rd
	argument to syswrite() calls for compatibility with
	perl 5.005.02 and earlier versions.  Thanks to Larry Rosenbaum.

	* bin/mj_trigger:  Issue error if the "-t" option is absent.
	Thanks to Brock Rozen.

	* lib/Mj/Parser.pm:  (parse_args)  Split on multiple spaces
	by default.  Thanks to Duncan Hill.

2002-04-18  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* Makefile.PL (generate_wrappers): Use standard C instead of
	obsolete K&R.

	* lib/Majordomo.pm (connect): Turn on autoflush for the session
	info file.

2002-04-16  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_request_response)  Add headers
	to the response message and safeguards against mail
	loops.

2002-04-08  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm:  Allow special-purpose welcome files to
	be supported using the "doc" CGI parameter.  The first
	such file is welcome_showtokens.

	* lib/Majordomo.pm:  (help_start)  Support TOPIC substitution,
	which allows the help file name to be displayed within the 
	help file.
	(_showtokens)  Sort tokens in Mj::Format::showtokens.
	(trigger)  Support GLOBAL file triggers.  Thanks to Brock Rozen.
	(_list_file_execute)  New routine.  Parse commands within a
	file and execute them.

	* lib/Mj/Addr.pm:  (new)  Return immediately if an address
	was not supplied.
